--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,45 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
+
 <body>
-    <header>
-        <div>
-            <nav class="navbar">
-                <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
-                <ul class="menu">
-                    <li><a href="../index.html" >Inicio</a></li>
-                    <li><a href="./nosotros.html" >Nosotros</a></li>
-                    <li><a href="./servicios.html" >Servicios</a></li>
-                    <li><a href="#" >Portfolio</a></li>
-                    <li><a href="./contacto.html" >Contacto</a></li>
-                    <li><a href="./bootstrap.html">Bootstrap</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="header">
+        <nav class="navbar-menu">
+            <a class="logo" href="#">Ares Digital Marketing</a>
+
+            <label class="label_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+            </label>
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+            <ul class="ul_links">
+                <li class="li_links">
+                    <a class="link" href="../index.html">Inicio</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./Nosotros.html">Nosotros</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./Servicios.html">Servicios</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="#">Portfolio</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./Contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <section class="Titulo">
             <h1>Portfolio</h1>
-            <p>En esta sección te presentamos algunos de los proyectos que hemos completado para nuestros valiosos clientes.</p>
+            <p>En esta sección te presentamos algunos de los proyectos que hemos completado para nuestros valiosos
+                clientes.</p>
             <div class="Logo-Titulo">
                 <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
             </div>
@@ -43,60 +62,107 @@
             <article class="Carre-work">
                 <h3>Carrefour</h3>
                 <div class="carre-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/159373649/Campana-de-Navidad-2022-Carrefour-Trucho?tracking_source=search_projects|carrefour+campa%C3%B1a&l=2"><img src="../assets/img/CarrefourPortfolio-desktop.svg " alt="trabajo realizado para la empresa Carrefour"></a>
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/159373649/Campana-de-Navidad-2022-Carrefour-Trucho?tracking_source=search_projects|carrefour+campa%C3%B1a&l=2"><img
+                            src="../assets/img/CarrefourPortfolio-desktop.svg "
+                            alt="trabajo realizado para la empresa Carrefour"></a>
                 </div>
                 <div class="background-work1">
-                    <p class="portfolioText">La campaña publicitaria de Navidad para Carrefour, utilizamos un enfoque humorístico y creativo para destacar la amplia variedad de productos disponibles durante las fiestas. A través de anuncios visuales y contenido multimedia, la campaña presenta situaciones cotidianas de la Navidad con un giro divertido, enfatizando la calidad y diversidad de los productos Carrefour para hacer de las festividades un momento especial y memorable.</p>
+                    <p class="portfolioText">La campaña publicitaria de Navidad para Carrefour, utilizamos un enfoque
+                        humorístico y creativo para destacar la amplia variedad de productos disponibles durante las
+                        fiestas. A través de anuncios visuales y contenido multimedia, la campaña presenta situaciones
+                        cotidianas de la Navidad con un giro divertido, enfatizando la calidad y diversidad de los
+                        productos Carrefour para hacer de las festividades un momento especial y memorable.</p>
                 </div>
             </article>
 
             <article class="Faber-work">
                 <h3>Faber-Castell</h3>
                 <div class="faber-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/186346523/Faber-Castell?tracking_source=search_projects|faber+castell&l=2"><img src="../assets/img/FaberCastelPortfolio-desktop.svg" alt="trabajo realizado para la empresa Faber Castell"></a>
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/186346523/Faber-Castell?tracking_source=search_projects|faber+castell&l=2"><img
+                            src="../assets/img/FaberCastelPortfolio-desktop.svg"
+                            alt="trabajo realizado para la empresa Faber Castell"></a>
                 </div>
                 <div class="background-work2">
-                    <p class="portfolioText">La campaña publicitaria para Faber-Castell destaca la creatividad y la calidad de sus productos de arte. Utilizando visuales coloridos y vibrantes, la campaña resalta cómo las herramientas de Faber-Castell pueden inspirar a artistas de todas las edades a expresar su imaginación sin límites. Los anuncios muestran diversas aplicaciones de los productos, desde dibujos detallados hasta proyectos artísticos innovadores, subrayando la versatilidad y excelencia de la marca.</p>
+                    <p class="portfolioText">La campaña publicitaria para Faber-Castell destaca la creatividad y la
+                        calidad de sus productos de arte. Utilizando visuales coloridos y vibrantes, la campaña resalta
+                        cómo las herramientas de Faber-Castell pueden inspirar a artistas de todas las edades a expresar
+                        su imaginación sin límites. Los anuncios muestran diversas aplicaciones de los productos, desde
+                        dibujos detallados hasta proyectos artísticos innovadores, subrayando la versatilidad y
+                        excelencia de la marca.</p>
                 </div>
             </article>
 
             <article class="sinte-work">
                 <h3>Sinteplast</h3>
-                <div class= "sinte-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/126568901/Flyers-publicitarios-digitales-Sinteplast-SA?tracking_source=search_projects|sinteplast&l=9"><img src="../assets/img/SinteplastPortfolio-desktop.svg" alt="trabajo realizado para la empresa Sinteplast"></a>
+                <div class="sinte-img">
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/126568901/Flyers-publicitarios-digitales-Sinteplast-SA?tracking_source=search_projects|sinteplast&l=9"><img
+                            src="../assets/img/SinteplastPortfolio-desktop.svg"
+                            alt="trabajo realizado para la empresa Sinteplast"></a>
                 </div>
                 <div class="background-work2">
-                    <p class="portfolioText">La campaña publicitaria digital de Sinteplast S.A. presenta una serie de flyers diseñados para destacar la calidad y variedad de sus productos de pintura y recubrimientos. Los visuales modernos y llamativos se centran en diferentes aplicaciones y beneficios de los productos Sinteplast, resaltando su durabilidad y acabado profesional. La campaña busca captar la atención de los clientes potenciales y promover el uso de sus productos tanto en proyectos domésticos como industriales.</p>
+                    <p class="portfolioText">La campaña publicitaria digital de Sinteplast S.A. presenta una serie de
+                        flyers diseñados para destacar la calidad y variedad de sus productos de pintura y
+                        recubrimientos. Los visuales modernos y llamativos se centran en diferentes aplicaciones y
+                        beneficios de los productos Sinteplast, resaltando su durabilidad y acabado profesional. La
+                        campaña busca captar la atención de los clientes potenciales y promover el uso de sus productos
+                        tanto en proyectos domésticos como industriales.</p>
                 </div>
             </article>
 
             <article class="Cine-work">
                 <h3>CineHoyts</h3>
                 <div class="cine-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/112520677/Hoyts-UXUI-rediseno-de-App?tracking_source=search_projects|cine+hoyts+ui&l=6"><img src="../assets/img/CineHoytsPortfolio-desktop.svg" alt="trabajo realizado para la empresa CineHoyts"></a>
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/112520677/Hoyts-UXUI-rediseno-de-App?tracking_source=search_projects|cine+hoyts+ui&l=6"><img
+                            src="../assets/img/CineHoytsPortfolio-desktop.svg"
+                            alt="trabajo realizado para la empresa CineHoyts"></a>
                 </div>
                 <div class="background-work1">
-                    <p class="portfolioText">La campaña publicitaria para el rediseño de la app de Hoyts se centra en mejorar la experiencia del usuario, haciéndola más intuitiva y atractiva. El rediseño incluye una interfaz más limpia y moderna, navegación simplificada y nuevas funcionalidades que facilitan la compra de boletos, selección de asientos y acceso a promociones. El objetivo principal es brindar a los usuarios una experiencia de uso más fluida y eficiente, reflejando la calidad y el compromiso de Hoyts con sus clientes.</p>
+                    <p class="portfolioText">La campaña publicitaria para el rediseño de la app de Hoyts se centra en
+                        mejorar la experiencia del usuario, haciéndola más intuitiva y atractiva. El rediseño incluye
+                        una interfaz más limpia y moderna, navegación simplificada y nuevas funcionalidades que
+                        facilitan la compra de boletos, selección de asientos y acceso a promociones. El objetivo
+                        principal es brindar a los usuarios una experiencia de uso más fluida y eficiente, reflejando la
+                        calidad y el compromiso de Hoyts con sus clientes.</p>
                 </div>
             </article>
 
             <article class="Farma-work">
                 <h3>Farmacity</h3>
                 <div class="farma-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/117034489/Farmacity-I-(Heart)-Farmacity?tracking_source=search_projects|farmacity+catalogo&l=7"><img src="../assets/img/FarmacityPortfolio-desktop.svg" alt="trabajo realizado para la empresa Farmacity"></a>
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/117034489/Farmacity-I-(Heart)-Farmacity?tracking_source=search_projects|farmacity+catalogo&l=7"><img
+                            src="../assets/img/FarmacityPortfolio-desktop.svg"
+                            alt="trabajo realizado para la empresa Farmacity"></a>
                 </div>
                 <div class="background-work1">
-                    <p class="portfolioText">La campaña publicitaria "I (Heart) Farmacity" se centra en reforzar la conexión emocional entre la marca y sus clientes. Utilizando gráficos vibrantes y mensajes positivos, la campaña destaca los productos y servicios de Farmacity que mejoran el bienestar y la calidad de vida. Los visuales incluyen elementos icónicos y frases inspiradoras que buscan transmitir cercanía y confianza, invitando a los consumidores a formar parte de la comunidad Farmacity</p>
+                    <p class="portfolioText">La campaña publicitaria "I (Heart) Farmacity" se centra en reforzar la
+                        conexión emocional entre la marca y sus clientes. Utilizando gráficos vibrantes y mensajes
+                        positivos, la campaña destaca los productos y servicios de Farmacity que mejoran el bienestar y
+                        la calidad de vida. Los visuales incluyen elementos icónicos y frases inspiradoras que buscan
+                        transmitir cercanía y confianza, invitando a los consumidores a formar parte de la comunidad
+                        Farmacity</p>
                 </div>
             </article>
 
             <article class="Grido-work">
                 <h3>Grido</h3>
                 <div class="grido-img">
-                    <a target="_blank" href="https://www.behance.net/gallery/161386055/Helados-Grido-de-Argentina-2022?tracking_source=search_projects|grido+helado&l=9"><img src="../assets/img/GridoPortfolio-desktop.svg" alt="trabajo realizado para la empresa Grido"></a>
+                    <a target="_blank"
+                        href="https://www.behance.net/gallery/161386055/Helados-Grido-de-Argentina-2022?tracking_source=search_projects|grido+helado&l=9"><img
+                            src="../assets/img/GridoPortfolio-desktop.svg"
+                            alt="trabajo realizado para la empresa Grido"></a>
                 </div>
                 <div class="background-work2">
-                    <p class="portfolioText">La campaña publicitaria de Helados Grido de Argentina se centra en resaltar la frescura y el sabor de sus productos. Utilizando imágenes vibrantes y atractivas, la campaña presenta una variedad de helados que invitan a disfrutar de momentos refrescantes y dulces. Los anuncios enfatizan la calidad y la diversidad de opciones que ofrece Grido, con el objetivo de captar la atención de los consumidores y posicionarse como la elección preferida durante el verano.</p>
+                    <p class="portfolioText">La campaña publicitaria de Helados Grido de Argentina se centra en resaltar
+                        la frescura y el sabor de sus productos. Utilizando imágenes vibrantes y atractivas, la campaña
+                        presenta una variedad de helados que invitan a disfrutar de momentos refrescantes y dulces. Los
+                        anuncios enfatizan la calidad y la diversidad de opciones que ofrece Grido, con el objetivo de
+                        captar la atención de los consumidores y posicionarse como la elección preferida durante el
+                        verano.</p>
                 </div>
             </article>
         </section>
@@ -109,11 +175,11 @@
 
         <nav class="menu-footer">
             <ul>
-                <li><a href="../index.html"  >Inicio</a></li>
-                <li><a href="./nosotros.html"  >Nosotros</a></li>
-                <li><a href="./servicios.html"  >Servicios</a></li>
-                <li><a href="#"  >Portfolio</a></li>
-                <li><a href="./contacto.html"  >Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./servicios.html">Servicios</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
                 <li><a href="./bootstrap.html">Bootstrap</a></li>
             </ul>
         </nav>
@@ -121,8 +187,9 @@
         <div class="redes-footer">
             <h3>Nuestras Redes</h3>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></a></i>
-            <a href="https://www.facebook.com/"target="_blank"><i class="fa-brands fa-facebook" id="logo-facebook"></a></i>
-            <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></a></i>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"
+                    id="logo-facebook"></a></i>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></a></i>
         </div>
 
         <div class="partner">
@@ -130,7 +197,7 @@
             <img src="../assets/img/Google-Partner.svg" alt="partner de Google">
         </div>
 
-        <div class="copyright" >
+        <div class="copyright">
             <p>© Copyright 2024-2034. All Rights Reserved. Ares Digital Marketing®</p>
         </div>
     </footer>
