Arreglado linkeo de paginas

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                     <a class="link" href="#">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./pages/Nosotros.html">Nosotros</a>
+                    <a class="link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./pages/Servicios.html">Servicios</a>
+                    <a class="link" href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./pages/Portfolio.html">Portfolio</a>
+                    <a class="link" href="./pages/portfolio.html">Portfolio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./pages/Contacto.html">Contacto</a>
+                    <a class="link" href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
