--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -27,16 +27,16 @@
                     <a class="link" href="../index.html">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Nosotros.html">Nosotros</a>
+                    <a class="link" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="li_links">
                     <a class="link" href="#">Servicios</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Portfolio.html">Portfolio</a>
+                    <a class="link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Contacto.html">Contacto</a>
+                    <a class="link" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
