--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,13 +28,13 @@
                     <a class="link" href="../index.html">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Nosotros.html">Nosotros</a>
+                    <a class="link" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Servicios.html">Servicios</a>
+                    <a class="link" href="./servicios.html">Servicios</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Portfolio.html">Portfolio</a>
+                    <a class="link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="li_links">
                     <a class="link" href="#">Contacto</a>
