--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,13 +31,13 @@
                     <a class="link" href="#">Nosotros</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Servicios.html">Servicios</a>
+                    <a class="link" href="./servicios.html">Servicios</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Portfolio.html">Portfolio</a>
+                    <a class="link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Contacto.html">Contacto</a>
+                    <a class="link" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
