--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -27,16 +27,16 @@
                     <a class="link" href="../index.html">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Nosotros.html">Nosotros</a>
+                    <a class="link" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Servicios.html">Servicios</a>
+                    <a class="link" href="./servicios.html">Servicios</a>
                 </li>
                 <li class="li_links">
                     <a class="link" href="#">Portfolio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./Contacto.html">Contacto</a>
+                    <a class="link" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
