--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="link" href="./pages/portfolio.html">Portfolio</a>
                 </li>
                 <li class="li_links">
-                    <a class="link" href="./pages/contacto.html">Contacto</a>
+                    <a class="link" href="/pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
