Aplicando Responsive a los demas HTML's que faltaban

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -45,7 +45,7 @@
     <main>
         <section class="Titulo">
             <h1>Portfolio</h1>
-            <p>En esta sección te presentamos algunos de los proyectos que hemos completado para nuestros valiosos
+            <p id="TituloParrafo">En esta sección te presentamos algunos de los proyectos que hemos completado para nuestros valiosos
                 clientes.</p>
             <div class="Logo-Titulo">
                 <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
