--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -129,10 +129,12 @@
 
         <div class="redes-footer">
             <h3>Nuestras Redes</h3>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></a></i>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"
+                id="logo-insta"></a></i>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"
                     id="logo-facebook"></a></i>
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></a></i>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"
+                id="logo-linkedin"></a></i>
         </div>
 
         <div class="partner">
